<resources>
    <string name="app_name">厂厂宝月台预约</string>
    <string name="app_name_us">changchangbao</string>
    <string name="home_page_one">接单</string>
    <string name="home_page_three">我的</string>
    <string name="home_order">接单</string>
    <string name="home_invite">邀请码&#12288;</string>
    <string name="confirm_title">确认合同</string>
    <string name="confirm_accept">确认接单</string>
    <string name="sign_up">提交</string>
    <string name="notify_title">消息中心</string>
    <string name="notify_details_title">系统消息</string>
    <string name="setting_title">设置</string>
    <string name="setting_photo">验证新手机号</string>
    <string name="setting_password">设置登录密码</string>
    <string name="setting_pwd_new">输入新密码&#12288;&#12288;</string>
    <string name="setting_pwd_cor">输入原密码&#12288;&#12288;</string>
    <string name="setting_pay_pwd">请设置支付密码&#12288;</string>
    <string name="cash_title">提现</string>
    <string name="cash_confirm_title">提现确认</string>
    <string name="back_card_title">银行卡管理</string>
    <string name="back_card_untying_title">银行卡管理</string>
    <string name="back_card_add_title">添加银行卡</string>
    <string name="bill_title">账单</string>
    <string name="cash_details_title">账单</string>
    <string name="waybill_title">我的运单</string>
    <string name="waybill_details_title">运单详情</string>
    <string name="info_title">信息认证</string>
    <string name="customer_title">厂厂宝</string>
    <string name="customer_dispat_title">派单记录</string>
    <string name="qr_title">我的二维码</string>
    <string name="customer_examine_title">订单审核</string>
    <string name="customer_examine_details_title">派车</string>
    <string name="customer_invit_title">生成邀请码</string>
    <string name="customer_sign_title">提货签收</string>
    <string name="customer_sign_car_qr_title">详情</string>
    <string name="customer_baidu">提货签到</string>

    <string name="touch_to_focus">触摸屏幕对焦</string>
    <string name="touch_to_focus_top">请将照片置于此区域内并对其边缘</string>
    <string name="crop_fail">裁剪失败</string>
    <string name="no_flash">该设备不支持闪光灯</string>
    <string name="cangkumingcheng">仓库名称</string>
    <string name="yuetaimingcheng">月台</string>
    <string name="yuetaiquanmingcheng">月台名称</string>
    <string name="paiduiyuyueshu">排队预约数</string>
    <string name="zuizaoyuyueshiduan">最早预约时段</string>
    <string name="yuetailiebiao">月台列表</string>
    <string name="duocangyuyue">多仓预约</string>
    <string name="qiyehaochaxun">企业号查询</string>
    <string name="cangkudaimachaxun">仓库代码查询</string>
    <string name="yonghuma">企业码</string>
    <string name="qingshuruyonghuma">请输入企业码</string>
    <string name="yonghumingcheng">企业名称</string>
    <string name="cangkudaima">仓库代码</string>
    <string name="qingshurucangkudaima">请输入仓库代码</string>
    <string name="tianjia">添加</string>
    <string name="quanbu">全部</string>
    <string name="chaxun">查询</string>
    <string name="yuyue">预约</string>
    <string name="duoxuanyuyue">多选预约</string>
    <string name="cangkubianma">仓库编码</string>
</resources>
