<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/TextGrayF5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen80dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/cangkudaima"
                android:textColor="@color/color_black_333333"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_warehouse_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/qingshurucangkudaima"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@color/black_666"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />
        </LinearLayout>

        <View style="@style/Base_line_Horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/dimen15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cangkumingcheng"
                android:textColor="@color/color_black_333333"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_warehouse_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black_666"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />


        </RelativeLayout>

        <View style="@style/Base_line_Horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/dimen15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/yuetaiquanmingcheng"
                android:textColor="@color/color_black_333333"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_yt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen10dp"
                android:layout_toLeftOf="@+id/tv_add_platform_moreorder"
                android:drawableRight="@drawable/app_arr_down"
                android:drawablePadding="@dimen/dimen10dp"
                android:text="@string/quanbu"
                android:textColor="@color/black_666"
                android:textSize="@dimen/sp_13"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_add_platform_moreorder"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/yt_button"
                android:drawableLeft="@drawable/app_add"
                android:drawablePadding="@dimen/dimen5dp"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen5dp"
                android:paddingRight="@dimen/dimen5dp"
                android:text="@string/tianjia"
                android:textColor="@color/white">

            </TextView>


        </RelativeLayout>

        <View style="@style/Base_line_Horizontal" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rc_yt_list_cangkuorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen15dp">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <Button
        android:id="@+id/bt_orderby_cangku"
        android:layout_width="@dimen/dimen100dp"
        android:layout_height="@dimen/dimen35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen25dp"
        android:background="@drawable/yt_button"
        android:text="@string/chaxun"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_13">

    </Button>
</RelativeLayout>